--- a/analiseficha.html
+++ b/analiseficha.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Análise de Fichas Técnicas • CMV</title>
+<title>Fichas Técnicas • Análise & Edição</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -14,19 +14,16 @@
   --bg:#f1f5f9;
   --card:#ffffff;
   --muted:#64748b;
-  --success:#16a34a;
+  --danger:#ef4444;
 }
 *{box-sizing:border-box}
 body{
   margin:0;
-  padding:28px;
+  padding:26px;
   background:var(--bg);
   font-family:Inter,Arial,sans-serif;
 }
-h1{
-  margin:0 0 24px;
-  font-weight:800;
-}
+h1{margin:0 0 24px;font-weight:800}
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fill,minmax(320px,1fr));
@@ -45,27 +42,20 @@ h1{
   height:200px;
   object-fit:cover;
 }
-.card-body{
+.body{
   padding:20px;
   display:flex;
   flex-direction:column;
   gap:14px;
 }
-.title{
-  font-size:18px;
-  font-weight:800;
-}
-.badges{
-  display:flex;
-  gap:8px;
-  flex-wrap:wrap;
-}
+.title{font-size:18px;font-weight:800}
 .badge{
+  background:#e0f2fe;
   padding:6px 12px;
   border-radius:999px;
-  background:#e0f2fe;
   font-size:12px;
   font-weight:700;
+  display:inline-block;
 }
 .kpis{
   display:grid;
@@ -78,14 +68,8 @@ h1{
   padding:12px;
   text-align:center;
 }
-.kpi span{
-  display:block;
-  font-size:12px;
-  color:var(--muted);
-}
-.kpi strong{
-  font-size:15px;
-}
+.kpi span{font-size:12px;color:var(--muted)}
+.kpi strong{font-size:15px}
 .ing{
   background:#f8fafc;
   border-radius:14px;
@@ -103,22 +87,93 @@ button{
   padding:14px;
   border-radius:18px;
   border:none;
-  background:linear-gradient(180deg,#2563eb,#1e40af);
-  color:#fff;
   font-weight:800;
   cursor:pointer;
 }
-.muted{
-  color:var(--muted);
-  font-size:13px;
+.edit{background:linear-gradient(180deg,#2563eb,#1e40af);color:#fff}
+
+/* MODAL */
+.modal{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.45);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:99;
+}
+.modal-box{
+  background:#fff;
+  width:100%;
+  max-width:980px;
+  max-height:90vh;
+  overflow:auto;
+  padding:26px;
+  border-radius:26px;
+}
+.modal-box h2{margin-top:0}
+.grid2{
+  display:grid;
+  grid-template-columns:2fr 1fr;
+  gap:18px;
+}
+input,select{
+  width:100%;
+  padding:12px;
+  border-radius:14px;
+  border:1px solid #cbd5e1;
+}
+.ing-edit{
+  display:grid;
+  grid-template-columns:2fr 1fr 1fr auto;
+  gap:8px;
+  margin-top:8px;
+}
+.remove{
+  background:var(--danger);
+  color:#fff;
 }
 </style>
 </head>
 
 <body>
 
-<h1>📊 Análise de Fichas Técnicas</h1>
+<h1>📊 Fichas Técnicas</h1>
 <div id="cards" class="grid"></div>
+
+<!-- MODAL EDIÇÃO -->
+<div id="modal" class="modal">
+<div class="modal-box">
+  <h2 id="editTitulo"></h2>
+
+  <div class="grid2">
+    <div>
+      <label>Nome do prato</label>
+      <input id="editNome">
+
+      <label style="margin-top:10px">Foto</label>
+      <input type="file" id="editFoto" accept="image/*">
+      <img id="preview" style="width:100%;border-radius:18px;margin-top:10px">
+    </div>
+
+    <div>
+      <div class="kpis">
+        <div class="kpi"><span>CMV Total</span><strong id="kCmvTotal"></strong></div>
+        <div class="kpi"><span>CMV Unit</span><strong id="kCmvUnit"></strong></div>
+        <div class="kpi"><span>Margem</span><strong id="kMargem"></strong></div>
+      </div>
+    </div>
+  </div>
+
+  <h3 style="margin-top:20px">Ingredientes</h3>
+  <div id="listaEdit"></div>
+
+  <div class="footer">
+    <button class="remove" onclick="fechar()">Cancelar</button>
+    <button class="edit" onclick="salvar()">Salvar Alterações</button>
+  </div>
+</div>
+</div>
 
 <script>
 const sb = supabase.createClient(
@@ -128,87 +183,113 @@ const sb = supabase.createClient(
 
 const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
 
-/* AUTH CHECK */
-async function check(){
+let ficha=null;
+let itens=[];
+
+/* AUTH */
+(async()=>{
   const { data } = await sb.auth.getSession();
   if(!data.session){
-    alert("Faça login primeiro");
+    alert("Faça login");
     location.href="index.html";
-    return;
   }
-}
-check();
+})();
 
 /* LOAD */
 async function carregar(){
-  const { data:fichas } = await sb
-    .from("buffet")
-    .select("*")
-    .order("created_at",{ascending:false});
-
-  for(const f of fichas){
-    const itens = await sb
-      .from("buffet_itens")
-      .select("*")
-      .eq("buffet_id",f.id);
-
-    renderCard(f,itens.data||[]);
+  const { data } = await sb.from("buffet").select("*").order("created_at",{ascending:false});
+  for(const f of data){
+    const itensDb = await sb.from("buffet_itens").select("*").eq("buffet_id",f.id);
+    render(f,itensDb.data||[]);
   }
 }
+carregar();
 
-function renderCard(f,itens){
-  const div=document.createElement("div");
-  div.className="card";
-
-  div.innerHTML=`
-    ${f.foto_url ? `<img src="${f.foto_url}">` : ``}
-
-    <div class="card-body">
+function render(f,it){
+  const c=document.createElement("div");
+  c.className="card";
+  c.innerHTML=`
+    ${f.foto_url?`<img src="${f.foto_url}">`:``}
+    <div class="body">
       <div class="title">${f.nome}</div>
-
-      <div class="badges">
-        <span class="badge">Venda ${moeda(f.preco_venda)}</span>
-        <span class="badge">Rendimento ${f.rendimento}</span>
-        <span class="badge">Margem ${Number(f.margem_percentual||0).toFixed(1)}%</span>
-      </div>
-
+      <span class="badge">Venda ${moeda(f.preco_venda)}</span>
       <div class="kpis">
-        <div class="kpi">
-          <span>CMV Total</span>
-          <strong>${moeda(f.custo_total)}</strong>
-        </div>
-        <div class="kpi">
-          <span>CMV Unit</span>
-          <strong>${moeda(f.custo_unitario)}</strong>
-        </div>
-        <div class="kpi">
-          <span>Preço</span>
-          <strong>${moeda(f.preco_venda)}</strong>
-        </div>
+        <div class="kpi"><span>CMV</span><strong>${moeda(f.custo_unitario)}</strong></div>
+        <div class="kpi"><span>Margem</span><strong>${Number(f.margem_percentual).toFixed(1)}%</strong></div>
+        <div class="kpi"><span>Porções</span><strong>${f.rendimento}</strong></div>
       </div>
-
-      <div class="muted">Ingredientes</div>
-      ${itens.map(i=>`
+      ${it.map(i=>`
         <div class="ing">
           <span>${i.nome}</span>
           <strong>${moeda(i.custo_calculado)}</strong>
         </div>
       `).join("")}
     </div>
-
     <div class="footer">
-      <button onclick="editar('${f.id}')">✏️ Editar Ficha</button>
+      <button class="edit" onclick="editar('${f.id}')">✏️ Editar</button>
     </div>
   `;
-
-  cards.appendChild(div);
+  cards.appendChild(c);
 }
 
-function editar(id){
-  location.href = `ficha-edicao.html?id=${id}`;
+/* EDITAR */
+async function editar(id){
+  const r1 = await sb.from("buffet").select("*").eq("id",id).single();
+  const r2 = await sb.from("buffet_itens").select("*").eq("buffet_id",id);
+
+  ficha=r1.data;
+  itens=r2.data;
+
+  editTitulo.textContent=ficha.nome;
+  editNome.value=ficha.nome;
+  preview.src=ficha.foto_url||"";
+
+  renderEdit();
+  modal.style.display="flex";
 }
 
-carregar();
+function renderEdit(){
+  listaEdit.innerHTML=itens.map((i,idx)=>`
+    <div class="ing-edit">
+      <input value="${i.nome}" disabled>
+      <input type="number" value="${i.quantidade}" onchange="itens[${idx}].quantidade=this.value">
+      <input type="number" value="${i.rendimento_percentual}" onchange="itens[${idx}].rendimento_percentual=this.value">
+      <button class="remove" onclick="itens.splice(${idx},1);renderEdit()">X</button>
+    </div>
+  `).join("");
+  recalcular();
+}
+
+function recalcular(){
+  const total=itens.reduce((s,i)=>s+i.custo_calculado,0);
+  const unit=total/ficha.rendimento;
+  kCmvTotal.textContent=moeda(total);
+  kCmvUnit.textContent=moeda(unit);
+  kMargem.textContent=(((ficha.preco_venda-unit)/ficha.preco_venda)*100).toFixed(1)+"%";
+}
+
+async function salvar(){
+  let foto=ficha.foto_url;
+
+  if(editFoto.files[0]){
+    const f=editFoto.files[0];
+    const path=`fichas/${Date.now()}-${f.name}`;
+    await sb.storage.from("buffet").upload(path,f);
+    foto=sb.storage.from("buffet").getPublicUrl(path).data.publicUrl;
+  }
+
+  await sb.from("buffet").update({
+    nome:editNome.value,
+    foto_url:foto
+  }).eq("id",ficha.id);
+
+  fechar();
+  location.reload();
+}
+
+function fechar(){
+  modal.style.display="none";
+}
 </script>
 
 </body>
