--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -331,7 +331,16 @@ async function selectProduto(id,nome){
   const r=await fetch(`/api/produto-preco/${id}`);
   const j=await r.json();
   const p=j.items?.[0]||{};
-  produto={id,nome,preco:Number(p.precoVenda1||0)};
+produto={
+  id,
+  nome,
+  preco: Number(
+    p.precoPromocional ||
+    p.precoVenda1 ||
+    p.precoVenda2 ||
+    0
+  )
+};
   produtoBadge.style.display="inline-block";
   produtoBadge.textContent=`${nome} • ${moeda(produto.preco)}`;
   precoVenda.textContent=moeda(produto.preco);
@@ -373,8 +382,7 @@ async function selectIng(id,nome){
 function addIngrediente(){
   if(!ingrediente||!qtd.value)return;
   const rendimento=(rend.value||100)/100;
-  const total=qtd.value*ingrediente.custo*rendimento;
-
+const total=(qtd.value*ingrediente.custo)/rendimento;
   ingredientes.push({
     nome:ingrediente.nome,
     quantidade:Number(qtd.value),
